# pdoc

./: .gitignore  Cargo.toml  LICENSE  README.md  askama.toml  flake.nix
assets/: CSMinimalInvoice.cls
src/: address.rs  cli.rs  client.rs  completion.rs  config.rs  contact.rs  date.rs  filters.rs  id.rs  invoice.rs  latex.rs  main.rs  me.rs  price.rs  project.rs  receipt.rs  storage.rs
templates/: invoice.tex  receipt.tex
templates/.auctex-auto/: invoice.el
