[package]
name = "pdoc"
version = "0.1.0"
authors = ["Oliver Evans <oliverevans96@gmail.com>"]
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
askama = "0.11.1"
askama_escape = "0.10.3"
clap = { version = "4.1.6", features = ["derive"] }
currency_rs = "1.1.3"
directories = "4.0.1"
inquire = { version = "0.5.3", features = ["date", "editor"] }
latex = "0.3.1"
serde = "1.0.152"
serde_yaml = "0.9.17"
shellexpand = "3.0.0"
strum = { version = "0.24.1", features = ["derive"] }
tempfile = "3.3.0"
texrender = "0.3.3"
thiserror = "1.0.38"
time = { version = "0.3.17", features = ["serde", "macros", "local-offset", "parsing", "formatting"] }
toml = "0.7.2"
